yeh pakka final hai

--- a/pages/index.html
+++ b/pages/index.html
@@ -37,7 +37,7 @@
     <!-- main -->
      <main >
 
-        <div class="md:w-full md:h-96 md:mb-10" style="background-image: url(s.png);background-size: cover; background-repeat: no-repeat; height: 500px; width: 100%; color: white; md:display flex; justify-content:space-around; md:align-items start; flex-direction: column; margin-bottom: 100px;">
+        <div class="md:w-full md:h-96 md:mb-10" style="background-image: url(s.png);background-size: cover; background-repeat: no-repeat; height: 500px; width: 100%; color: white; display: flex; justify-content:space-around; align-items: start; flex-direction: column; margin-bottom: 100px;">
 
             <marquee behavior="" direction=""><h1 class="md:text-4xl md:font-mono md:ml-6">Breaking Barriers, Together</h1></marquee><br><br>
             <p class="md:text-xl md:w-1/2 text-white md:ml-6">A platform that educates people about HIV/AIDS, empowering individuals with knowledge to prevent, manage, and support those affected. Through accurate information, personal stories, and accessible resources, we strive to break the stigma surrounding HIV/AIDS and foster a compassionate, informed community.</p>
